Set correct property requirements
